added doc color + chnaged text color + made about me card

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,11 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body style="
+  background-color: #800020;
+  background-size:cover;
+  text-align: center;
+  color: #BEBEBE">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
