sticky navbar + resizing card components

--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,7 @@
   </head>
   <body style="
   background-color: #800020;
-  background-size:cover;
-  text-align: center;
+  font-size: 200%;
   color: #BEBEBE">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
